Add functionality to find youngest employee by department and implement various stream operations in InterviewDuplicate class